fixed #33. In the new metadata window, for the column visibility, is it possible to add the option of disabling all columns?
           This would be very useful when there are many columns and you want to view only very few (the most typical case).

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -99,8 +99,9 @@ body {
   float: right;
 }
 
+//metadata result table column selection
 div.dt-button-collection{
-  width: inherit;
+  width: inherit !important;
   overflow: auto;
   max-height: 500px;
 }
